# fobnail

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  build.sh  metadata_gen.py  pre-commit.sh  run-container.sh  typos.toml
.cargo/: config
.github/workflows/: build.yml  dummy_po_root.crt
pal/pal_macros/: Cargo.toml
pal/pal_macros/src/: lib.rs
pal/pal_nrf/: Cargo.toml  link.x
pal/pal_nrf/src/: button.rs  c_compat.rs  device_id.rs  ethernet.rs  heap.rs  led.rs  lib.rs  logger.rs  monotonic.rs  mpu.rs  net.rs  panic.rs  timer.rs
pal/pal_nrf/src/trussed/: drivers.rs  mod.rs  store.rs
pal/pal_nrf/src/usb/: mod.rs
pal/pal_pc/: Cargo.toml
pal/pal_pc/src/: button.rs  device_id.rs  ethernet.rs  led.rs  lib.rs  timer.rs
pal/pal_pc/src/net/: mod.rs  tuntap.rs
pal/pal_pc/src/trussed/: mod.rs  store.rs
src/: coap.rs  logger.rs  main.rs  rng.rs  udp.rs
src/certmgr/: error.rs  key.rs  mod.rs  signature.rs  store.rs  verify.rs  x509.rs
src/client/: crypto.rs  metadata.rs  mod.rs  policy.rs  proto.rs  signing.rs  state.rs  util.rs
src/client/attestation/: mod.rs  state.rs
src/client/crypto/: mod.rs  rng.rs
src/client/provisioning/: mod.rs  state.rs
src/client/token_provisioning/: csr.rs  mod.rs  state.rs
src/client/tpm/: aes.rs  aik.rs  ek.rs  kdf.rs  mod.rs  mu.rs
src/coap/: error.rs  mod.rs
src/drivers/: led.rs  mod.rs
src/drivers/usb/: ethernet.rs  mod.rs
src/drivers/usb/eem/: buffer.rs  eem.rs  mod.rs
src/server/: mod.rs  proto.rs
src/server/attestation/: mod.rs
src/server/fts/: storage.rs
src/server/provisioning/: mod.rs
src/server/token_provisioning/: csr.rs  mod.rs
src/util/: coap.rs  mod.rs  policy.rs  provisioning.rs  req.rs  rng.rs  signing.rs
src/util/crypto/: mod.rs
src/util/tpm/: aik.rs  ek.rs  fake_rng.rs  kdf.rs  mod.rs  mu.rs
tools/lfs/: Cargo.toml
tools/lfs/src/: cert.rs  main.rs
tpm_ek_roots/: Infineon_OPTIGA(TM)_RSA_Root_CA_2.crt  Microsoft TPM Root Certificate Authority 2014.crt  NTC TPM EK Root CA 01.crt  NTC TPM EK Root CA 02.crt  NTC TPM EK Root CA ARSUF 01.crt  Nuvoton TPM Root CA 1013.crt  Nuvoton TPM Root CA 1014.crt  Nuvoton TPM Root CA 2010.crt  Nuvoton TPM Root CA 2011.crt  Nuvoton TPM Root CA 2012.crt  OptigaRsaRootCA3.crt  README.md
