[package]
name = "fobnail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "none")'.dependencies]
pal_nrf = { path = "pal/pal_nrf" }
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "proto-ipv4", "socket-udp", "ethernet", "log"] }

[target.'cfg(target_os = "linux")'.dependencies]
pal_pc = { path = "pal/pal_pc" }
smoltcp = { version = "0.7.5", default-features = false, features = ["proto-ipv4", "socket-udp", "ethernet", "log"] }

[dependencies]
log = { version = "0.4", default-features = false, features = ["max_level_trace"] }
coap-lite = { version = "0.7", default-features = false }
# Must be kept in sync with pal_nrf and pal_pc
trussed = { path = "external/trussed" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
rsa = { version = "0.5", default-features = false, features = ["alloc"] }
x509 = { path = "external/formats/x509" }
x501 = { path = "external/formats/x501" }
der = { path = "external/formats/der" }

[profile.dev]
lto = "thin"

[profile.dev.package]
# Trussed dependencies
trussed = { opt-level = "z" }
aes = { opt-level = "z" }
# blake2 = { opt-level = "z" }
block-modes = { opt-level = "z" }
chacha20 = { opt-level = "z" }
chacha20poly1305 = { opt-level = "z" }
des = { opt-level = "z" }
hmac = { opt-level = "z" }
sha-1 = { opt-level = "z" }
sha2 = { opt-level = "z" }

cosey = { opt-level = "z" }
delog = { opt-level = "z" }
cbor-smol = { opt-level = "z" }
heapless-bytes = { opt-level = "z" }
interchange = { opt-level = "z" }
littlefs2 = { opt-level = "z" }
p256-cortex-m4 = { opt-level = "z" }
salty = { opt-level = "z" }
serde-indexed = { opt-level = "z" }
