[package]
name = "fobnail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "none")'.dependencies]
pal_nrf = { path = "pal/pal_nrf" }

[target.'cfg(target_os = "linux")'.dependencies]
pal_pc = { path = "pal/pal_pc" }

[dependencies]
log = { version = "0.4", default-features = false, features = ["max_level_trace"] }
coap-lite = { path = "external/coap-lite", default-features = false }
# Must be kept in sync with pal_nrf and pal_pc
trussed = { path = "external/trussed" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
rsa = { version = "0.5", default-features = false, features = ["alloc"] }
spki = { path = "external/formats/spki" }
x509-cert = { path = "external/formats/x509" }
der = { path = "external/formats/der" }

# TODO: remove these dependencies after RSA gets moved to Trussed.
rand_core = { version = "0.6", default-features = false }
# TODO: Another dependency that should be removed. Trussed implements SHA256 but
# due to its API limitations we cannot use it with RSA OAEP - Trussed expects a
# continuous buffer, but rsa crate requires update().
sha2 = { version = "0.9", default-features = false }
# TODO: Move to Trussed
# Use version 0.11 instead of latest (0.12) - until rsa v0.6 comes out we need
# to use old hmac version, otherwise we run into complex build failures because
# of between two different versions of digest crate which is dependency of these
# two
hmac = { version = "0.11", default-features = false }
# Trussed supports only AES 256 CBC but we need CFB
cfb-mode = { version = "0.8", default-features = false }
aes = "0.8"

embedded-io = "0.3"

coap-server = { path = "external/coap-server-rs", default-features = false, features = ["embassy"] }
async-trait = "0.1"
pin-project = "1"
futures-util = { version = "0.3", default-features = false }
futures-lite = { version = "1", default-features = false }

[build-dependencies]
pem-rfc7468 = { path = "external/formats/pem-rfc7468", features = ["std"] }
anyhow = "1"
walkdir = "2"
x509-cert = { path = "external/formats/x509", features = ["std"] }

[profile.dev]
lto = "thin"
opt-level = "z"

[profile.dev.package]
# FIXME: Littlefs requires strcpy() when optimizations are enabled.
littlefs2-sys = { opt-level = 0 }
