[package]
name = "pal_nrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52840-hal = { path = "../../external/nrf-hal/nrf52840-hal", features = ["rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
usb-device = "0.2.8"
# TODO: after this crate gets published, it should be fetched from crates.io
# instead of git
usbd-ethernet = { git = "https://github.com/fobnail/usbd-ethernet", features = ["smoltcp_integration", "logging"] }

smoltcp = { version = "0.7.5", default-features = false, features = ["proto-ipv4", "socket-udp", "ethernet", "log"] }
log = { version = "0.4", default-features = false }

[dependencies.embedded-hal]
version = "0.2.6"
default-features = false
features = ["unproven"]
