[package]
name = "pal_nrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: currently we are using HAL from https://github.com/ia0/nrf-hal/tree/better_nvmc
# because current implementation of NOR flash read/write/erase function was so broken
# that it was unusable, after this https://github.com/nrf-rs/nrf-hal/pull/374/
# gets merged and new release cames out we should update this.
nrf52840-hal = { path = "../../external/nrf-hal/nrf52840-hal", features = ["rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
usb-device = "0.2.8"
# TODO: after this crate gets published, it should be fetched from crates.io
# instead of git
usbd-ethernet = { git = "https://github.com/fobnail/usbd-ethernet", features = ["smoltcp_integration", "logging"] }

log = { version = "0.4", default-features = false }

linked_list_allocator = { version = "0.9.1", default-features = false, features = ["const_mut_refs"] }

rand_core = { version = "0.6", default-features = false }
chacha20 = { version = "0.8", features = ["rng"] }
# Use the same version as Trussed, must be kept in sync
littlefs2 = { git = "https://github.com/fobnail/littlefs2", branch = "upstream-v2.4.2-fs-corruption-fix" }
embedded-storage = "0.3"
embassy-util = { path = "../../external/embassy/embassy-util", features = [] }
embassy-executor = { path = "../../external/embassy/embassy-executor", features = ["nightly", "time"] }
embassy-nrf = { path = "../../external/embassy/embassy-nrf", features = ["nrf52840", "time-driver-rtc1"] }
embassy-net = { path = "../../external/embassy/embassy-net", features = ["udp", "tcp", "medium-ethernet", "pool-32"] }
futures-util = { version = "0.3", default-features = false }
pal_macros = { path = "../pal_macros", features=["nrf52840"] }

# void type, this is a relict of the past from the time when Rust didn't have
# ! type, nRF hal still uses this
void = { version = "1", default-features = false }

cortex-mpu = { path = "../../external/cortex-mpu" }

[dependencies.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp"
rev = "ed0cf16750a42f30e31fcaf5347915592924b1e3"
features = ["proto-ipv4"]
default-features = false

# Must be kept in sync with pal_nrf and pal_pc
[dependencies.trussed]
path = "../../external/trussed"
default-features = false
features = [
    "ed255",
    "clients-1",
]

[dependencies.embedded-hal]
version = "0.2.6"
default-features = false
features = ["unproven"]
