[package]
name = "pal_pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
smoltcp = { version = "0.7.5", default-features = false, features = ["phy-tap_interface"] }
rand_core = { version = "0.6", features = ["getrandom"] }
chacha20 = { version = "0.8", features = ["rng"] }
littlefs2 = "0.3"
# Must be kept in with pal_nrf and pal_pc
trussed = { path = "../../external/trussed" }
