[package]
name = "pal_pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
chacha20 = { version = "0.8", features = ["rng"] }
# Use the same version as Trussed, must be kept in sync
littlefs2 = { git = "https://github.com/fobnail/littlefs2", branch = "upstream-v2.4.2-fs-corruption-fix" }
# Must be kept in with pal_nrf and pal_pc
trussed = { path = "../../external/trussed" }
libc = "0.2"
async-io = "1"
embassy-util = { path = "../../external/embassy/embassy-util", features = [] }
embassy-executor = { path = "../../external/embassy/embassy-executor", features = ["nightly", "std"] }
embassy-net = { path = "../../external/embassy/embassy-net", features = ["udp", "tcp", "medium-ethernet", "pool-32"] }
pal_macros = { path = "../pal_macros", features = ["pc"] }
