[package]
name = "lfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
littlefs2 = { git = "https://github.com/fobnail/littlefs2", branch = "upstream-v2.4.2" }
anyhow = "1"
x509-parser = "0.13"
pem = "1"
sha2 = "0.10"
